[package]
name = "olm-sys"
version = "1.0.0"
authors = ["BrainBlasted <brainblasted@disroot.org>", "Johannes Hayeß <jhaye@mailbox.org>"]
license = "Apache-2.0"
description = "Low level binding for libolm"
repository = "https://gitlab.gnome.org/BrainBlasted/olm-sys"
readme = "README.md"
build = "build.rs"

[build-dependencies]
cmake = "0.1"
